--- a/index.html
+++ b/index.html
@@ -1,1 +1,74 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Defending Jahnavi</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f4f4f4;
+      color: #333;
+      margin: 0;
+      padding: 0;
+      line-height: 1.6;
+    }
+    header {
+      background-color: #2c3e50;
+      color: white;
+      text-align: center;
+      padding: 2rem 1rem;
+    }
+    main {
+      max-width: 900px;
+      margin: 2rem auto;
+      padding: 2rem;
+      background: white;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+    p {
+      margin-bottom: 1.2rem;
+    }
+    footer {
+      text-align: center;
+      color: #999;
+      font-size: 0.9em;
+      padding: 1rem;
+    }
+    a {
+      color: #1a0dab;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Defending Jahnavi</h1>
+    <p>Support for truth, excellence, and ambition</p>
+  </header>
 
+  <main>
+    <p>What makes you think that she is not an astronaut candidate? An astronaut candidate is someone who is an astronaut-in-training. Jahnavi is in my team at Titans Space. I am a STEM PhD of ETH Zurich, the Swiss Federal Institute of Technology of Zurich, which has been host to 21 Nobel Prize winners including Albert Einstein. So, if you are talking of STEM master degrees, know that, people in our team have STEM PhDs from some of the best research institutes in the world, likes of Harvard and ETH Zurich. I currently work at an institute in Germany which had von Karman as its director in the past, who is one of the greatest aerodynamic theorists the world has ever produced.</p>
+
+    <p>Most of our team mates, astronaut candidates, in Titans Space, have already undergone several Analog Astronaut camps, have cleared medical screenings, have done EVAs, have handled emergencies, and have attended Analog Astronaut conferences (such as ones with CHASM in Lausanne, <a href="https://www.astro-chasm.org/" target="_blank">https://www.astro-chasm.org/</a>). Myself and Jahnavi did our Analog missions in the same habitat, AATC in Poland (<a href="https://www.astronaut.center/" target="_blank">https://www.astronaut.center/</a>).</p>
+
+    <p>And you are undermining the achievements of a young Indian who dared to dream. And this at a time, when Shubhanshu Shukla has successfully docked at ISS, being the 1st Indian to do so, and the 2nd Indian to go to space. Unfortunate! Get your facts right. You should be proud of what Jahnavi has achieved in her career so far, she is a role model for many. If you can't contribute anything, you don't have any right to critique others, who are engaged 24 x 7 to make India proud.</p>
+
+    <p>Of course, the path is not easy. There will be multiple challenges ahead. If you have read 'Wings of Fire' or 'Ignited Mind', you would know that what the generation of Vikram Sarabhai or President Abdul Kalam had built, the recent successes of ISRO is a result of that legacy. And they had encountered innumerable failures on the way. But, they dared to dream, and make India an equal for Axiom-4 mission now, and lunar south pole landing of a spacecraft in 2023, which is a first for humanity. Do not undermine someone who dared to dream.</p>
+
+    <p>And what makes you think that former NASA astronaut Bill McArthur, is not part of the mission just because there is no news on it? Bill McArthur interviewed me, Bill McArthur interviewed Jahnavi. These are personal interviews by a Titans Space committee which consists of experts in the fields including Bill McArthur.</p>
+
+    <p>And regarding company disclosures, why would any company disclose confidential information when it is still on Stealth mode. Any revelations will come at a time when the company / Titans Space feels is right and not at a time when you feel is right.</p>
+
+    <p>Again, no one is claiming that we are NASA. This is a commercial mission, and we have nothing to do with NASA. Bill McArthur is a former astronaut from NASA, that's our only connection with NASA.</p>
+
+    <p>I would assume you are Indian, since you are posting in r/indianaviation. My dear countryman, as a fellow Indian, my only advice to you would be to learn to support and encourage your own countrymen, when they are undertaking some of the most challenging paths in their lives / careers, just to make India proud.</p>
+
+    <p><strong>Best,<br/>Swayam</strong></p>
+  </main>
+
+  <footer>
+    &copy; 2025 Defending Jahnavi
+  </footer>
+</body>
+</html>
