--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </head>
 <body>
   <header>
-    <h1>Defending Jahnavi</h1>
+    <h1>Responding to something that is not true</h1>
     <p>Support for truth, excellence, and ambition</p>
   </header>
 
@@ -56,7 +56,7 @@
 
     <p>Of course, the path is not easy. There will be multiple challenges ahead. If you have read 'Wings of Fire' or 'Ignited Mind', you would know that what the generation of Vikram Sarabhai or President Abdul Kalam had built, the recent successes of ISRO is a result of that legacy. And they had encountered innumerable failures on the way. But, they dared to dream, and make India an equal for Axiom-4 mission now, and lunar south pole landing of a spacecraft in 2023, which is a first for humanity. Do not undermine someone who dared to dream.</p>
 
-    <p>And what makes you think that former NASA astronaut Bill McArthur, is not part of the mission just because there is no news on it? Bill McArthur interviewed me, Bill McArthur interviewed Jahnavi. These are personal interviews by a Titans Space committee which consists of experts in the fields including Bill McArthur.</p>
+    <p>And what makes you think that former NASA astronaut Bill McArthur, is not part of the mission just because there is no news on it? Bill McArthur interviewed me, Bill McArthur interviewed her. These are personal interviews by a Titans Space committee which consists of experts in the fields including Bill McArthur.</p>
 
     <p>And regarding company disclosures, why would any company disclose confidential information when it is still on Stealth mode. Any revelations will come at a time when the company / Titans Space feels is right and not at a time when you feel is right.</p>
 
