--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   </main>
 
   <footer>
-    &copy; 2025 Defending
+    &copy; 2025 Defending an astronaut candidate
   </footer>
 </body>
 </html>
